--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,160 @@
-blinker==1.9.0
-click==8.2.0
-Flask==3.1.0
+aiohttp==3.9.5
+aiosignal==1.3.1
+alembic==1.13.1
+annotated-types==0.7.0
+anyio==4.4.0
+appnope==0.1.4
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+asttokens==2.4.1
+async-lru==2.0.4
+attrs==23.2.0
+Babel==2.15.0
+beautifulsoup4==4.12.3
+bidict==0.23.1
+bleach==6.1.0
+blinker==1.8.1
+bp==0.0.4
+build==1.2.1
+certifi==2024.2.2
+cffi==1.16.0
+charset-normalizer==3.3.2
+click==8.1.7
+comm==0.2.2
+dataclasses-json==0.6.7
+debugpy==1.8.1
+decorator==5.1.1
+defusedxml==0.7.1
+distro==1.9.0
+dnspython==2.6.1
+elastic-transport==8.13.0
+elasticsearch==8.13.1
+email_validator==2.1.1
+executing==2.0.1
+fastjsonschema==2.20.0
+Flask==3.0.3
+Flask-Avatars==0.2.3
 flask-cors==5.0.1
+Flask-Login==0.6.3
+Flask-Mail==0.9.1
+Flask-Migrate==4.0.7
+Flask-SocketIO==5.3.6
+Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.1
+fqdn==1.5.1
+frozenlist==1.4.1
+h11==0.14.0
+httpcore==1.0.5
+httpx==0.27.0
+idna==3.7
+importlib_metadata==7.1.0
+ipykernel==6.29.4
+ipython==8.25.0
+is-disposable-email==1.0.0
+isoduration==20.11.0
 itsdangerous==2.2.0
-Jinja2==3.1.6
-MarkupSafe==3.0.2
-Werkzeug==3.1.3
+jedi==0.19.1
+Jinja2==3.1.3
+json5==0.9.25
+jsonpatch==1.33
+jsonpointer==3.0.0
+jsonschema==4.22.0
+jsonschema-specifications==2023.12.1
+jupyter-events==0.10.0
+jupyter-lsp==2.2.5
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+jupyter_server==2.14.1
+jupyter_server_terminals==0.5.3
+jupyterlab==4.2.2
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.27.2
+langchain==0.1.6
+langchain-community==0.0.20
+langchain-core==0.1.23
+langchain-experimental==0.0.49
+langchain-openai==0.0.5
+langsmith==0.0.87
+Mako==1.3.3
+MarkupSafe==2.1.5
+marshmallow==3.21.3
+matplotlib-inline==0.1.7
+migrate==0.3.8
+mistune==3.0.2
+multidict==6.0.5
+mypy-extensions==1.0.0
+nbclient==0.10.0
+nbconvert==7.16.6
+nbformat==5.10.4
+nest-asyncio==1.6.0
+notebook_shim==0.2.4
+numpy==1.26.4
+openai==1.12.0
+optional==0.0.1
+overrides==7.7.0
+packaging==23.2
+pandas==2.2.2
+pandocfilters==1.5.1
+parso==0.8.4
+pexpect==4.9.0
+pillow==10.3.0
+pip-tools==7.4.1
+platformdirs==4.2.2
+prometheus_client==0.20.0
+prompt_toolkit==3.0.47
+psutil==5.9.8
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pycparser==2.22
+pydantic==2.7.4
+pydantic_core==2.18.4
+pygame==2.2.0
+Pygments==2.18.0
+pyodbc==5.1.0
+pyproject_hooks==1.1.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-engineio==4.9.0
+python-json-logger==2.0.7
+python-socketio==5.11.2
+pytz==2024.1
+PyYAML==6.0.1
+pyzmq==26.0.3
+referencing==0.35.1
+regex==2024.5.15
+requests==2.32.3
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rpds-py==0.18.1
+Send2Trash==1.8.3
+simple-websocket==1.0.0
+six==1.16.0
+sniffio==1.3.1
+soupsieve==2.5
+SQLAlchemy==2.0.29
+stack-data==0.6.3
+tabulate==0.9.0
+tenacity==8.4.1
+terminado==0.18.1
+tiktoken==0.5.2
+tinycss2==1.2.1
+tornado==6.4.1
+tqdm==4.66.4
+traitlets==5.14.3
+types-python-dateutil==2.9.0.20240316
+typing-inspect==0.9.0
+typing_extensions==4.11.0
+tzdata==2024.1
+uri-template==1.3.0
+urllib3==2.2.1
+wcwidth==0.2.13
+webcolors==24.6.0
+webencodings==0.5.1
+websocket-client==1.8.0
+Werkzeug==3.0.2
+wsproto==1.2.0
+WTForms==3.1.2
+wtforms-validators==1.0.0
+yarl==1.9.4
+zipp==3.18.1
